--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -11,3 +11,9 @@ two:
   description: MyText
   image_url: MyString
   price: 9.99
+
+Man:
+  title: Man
+  description: Bongo-Bong
+  image_url: 3.jpg
+  price: 49.95
